--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -10,41 +10,40 @@ These are all methods on [the Organization class](/docs/references/javascript/or
 ## `getMemberships()`
 
 ```typescript
-function getMemberships(params?: GetMembershipsParams): Promise<OrganizationMembership[]>;
+function getMemberships(params?: GetMembershipsParams): Promise<PaginatedResponse<OrganizationMembership>>;
 ```
 
-Retrieve the members of the selected
+Retrieve the members of the currently active organization.
 
 ### `GetMembershipsParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>limit</code>,
-  <code>number | undefined</code>,
-  "Limit of the results returned.",
-  ]},
-  {cells: [
-  <code>offset</code>,
-  <code>number | undefined</code>,
-  "The offset of results to start the retrieval.",
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | number | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | number | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response |
+
+<Callout type="info">
+    `GetMembershipsParams` was recently updated. The `limit` and `offset` parameters are now deprecated.
+</Callout>
+
 
 ### Returns
 
 <Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-membership">OrganizationMembership</a>[]{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with a list of <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code> objects.</>,
-  ]},
-  ]}
+    headings={["Type", "Description"]}
+    headingsMeta={[{}, {maxWidth: "300px"}]}
+    rows={[
+        {
+            cells: [
+                <code>Promise{"<"}<a
+                    href="/docs/references/javascript/types/paginated-response">PaginatedResponse</a>{"<"}<a
+                    href="/docs/references/javascript/organization-domain">OrganizationMembership</a>{">"}</code>,
+                <>This method returns a <code>Promise</code> which resolves with a list of <code><a
+                    href="/docs/references/javascript/organization-domain">OrganizationMembership</a></code> objects.</>,
+            ]
+        },
+    ]}
 />
 
 ## `addMember()`
@@ -59,35 +58,16 @@ Please note that only administrators can add members to an organization.
 
 ### `AddMemberParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>userId</code>,
-  <code>string</code>,
-  "The ID of the user that will be added as a member to the organization.",
-  ]},
-  {cells: [
-  <code>role</code>,
-  <code>'admin' | 'basic_member' | 'guest_member'</code>,
-  <>The role that the user will have in the organization.</>,
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `userId` | `string` | The ID of the user that will be added as a member to the organization. |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role that the user will have in the organization. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-membership">OrganizationMembership</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with the <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code> objects.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a <code>Promise</code> which resolves with the <code>[OrganizationMembership][org-mem-ref]</code> objects. |
 
 ## `updateMember()`
 
@@ -99,35 +79,16 @@ Updates a member based on the *userId*. For now only role can be changed.
 
 ### `UpdateMembershipParams`
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>userId</code>,
-  <code>string</code>,
-  "The user identifier.",
-  ]},
-  {cells: [
-  <code>role</code>,
-  <code>'admin' | 'basic_member' | 'guest_member'</code>,
-  <>The role of the new member.</>,
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `userId` | `string` | The user identifier. |
+| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new member. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-membership">OrganizationMembership</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with the updated <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code> object.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a <code>Promise</code> which resolves with the updated <code>[OrganizationMembership][org-mem-ref]</code> objects. |
 
 ## `removeMember()`
 
@@ -139,27 +100,14 @@ Removes a member from the organization based on the userId.
 
 ### Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-  {cells: [
-  <code>userId</code>,
-  <code>string</code>,
-  "The user identifier.",
-  ]},
-  ]}
-/>
+| Name | Type | Description |
+| --- | --- | --- |
+| `userId` | `string` | The user identifier. |
 
 ### Returns
 
-<Tables
-  headings={["Type", "Description"]}
-  headingsMeta={[{}, {maxWidth: "300px"}]}
-  rows={[
-  {cells: [
-  <code>Promise{"<"}<a href="/docs/references/javascript/organization-membership">OrganizationMembership</a>{">"}</code>,
-  <>This method returns a <code>Promise</code> which resolves with the removed <code><a href="/docs/references/javascript/organization-membership">OrganizationMembership</a></code> object.</>,
-  ]},
-  ]}
-/>
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[OrganizationMembership][org-mem-ref]\></code> | This method returns a <code>Promise</code> which resolves with the removed <code>[OrganizationMembership][org-mem-ref]</code> objects. |
+
+[org-mem-ref]: /docs/references/javascript/organization-membership
