feat: Introduce Organization Domains (revisit) 2

--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -41,7 +41,7 @@ To keep network usage to a minimum, we require developers to opt-in by specifyin
 
 ```jsx
 const { invitations } = useOrganization();
-// invitationList.data will never be populated
+// invitations.data will never be populated
 
 // Use default values to fetch invitations
 const { invitations } = useOrganization({
