--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -1,6 +1,6 @@
 ---
 title: <ClerkProvider />
-description: The `<ClerkProvider />` component wraps your React application to provide active session and user context to Clerk's hooks and other components.
+description: The <ClerkProvider /> component wraps your React application to provide active session and user context to Clerk's hooks and other components.
 ---
 
 import { Tab, Tabs } from "nextra-theme-docs";
@@ -18,6 +18,7 @@ The `<ClerkProvider />` component must be added to your React entrypoint.
 <Tabs items={['Next.js', 'React']}>
 <Tab>
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
+
 ```tsx filename="app/layout.tsx"
 import React from "react";
 import { ClerkProvider } from "@clerk/nextjs";
@@ -39,6 +40,7 @@ export default function RootLayout({
   );
 }
 ```
+
 ```tsx filename="_app.tsx"
 import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
@@ -53,9 +55,11 @@ function MyApp({ Component, pageProps }: AppProps) {
 
 export default MyApp;
 ```
+
 </CodeBlockTabs>
 </Tab>
 <Tab>
+
 ```tsx filename="index.tsx"
 import React from "react";
 import ReactDOM from "react-dom";
@@ -73,6 +77,7 @@ ReactDOM.render(
   document.getElementById("root")
 );
 ```
+
 </Tab>
 </Tabs>
 
@@ -81,80 +86,17 @@ ReactDOM.render(
 
 ## Props
 
-<Tables
-  headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
-  rows={[
-    {
-      cells: [
-        <code>publishableKey</code>,
-        <code>string</code>,
-        <>Clerk publishable key for your instance. This can be found in your Clerk Dashboard.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>frontendApi</code>,
-        <code>string</code>,
-        <>The frontend API host for your instance. This can be found in your Clerk Dashboard.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>navigate?</code>,
-        <code>{`(to: string) => Promise<unknown> | void`}</code>,
-        <>A function which takes the destination path as an argument and performs a "push" navigation.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>clerkJSVariant?</code>,
-        <code>string</code>,
-        <>If your web application uses only Control components you can set this value to headless and load a minimal ClerkJS bundle for optimal page performance.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>supportEmail?</code>,
-        <code>string</code>,
-        <>Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>localization?</code>,
-        <code>object</code>,
-        <>Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>appearance?</code>,
-        <code>object</code>,
-        <>Optional object to customize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>allowedRedirectOrigins?</code>,
-        <code>{`Array<string | RegExp>`}</code>,
-        <>Optional array of domains used to validate against the query param of an auth redirect.
-        <br/>If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignInUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after successful sign in.</>,
-      ],
-    },
-    {
-      cells: [
-        <code>afterSignUpUrl</code>,
-        <code>string</code>,
-        <>Full URL or path to navigate after successful sign up.</>,
-      ],
-    }
-  ]}
-/>
+| Name                      | Type                                       | Description                                                                                                                                                                                                                |
+|---------------------------|--------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `publishableKey`          | `string`                                   | Clerk publishable key for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
+| `frontendApi`             | `string`                                   | The frontend API host for your instance. This can be found in your Clerk Dashboard.                                                                                                                                        |
+| `navigate?`               | `(to: string) => Promise<unknown> \| void` | A function which takes the destination path as an argument and performs a "push" navigation.                                                                                                                               |
+| `clerkJSUrl?`             | `string`                                   | Define the URL that `@clerk/clerk-react` should hot-load `@clerk/clerk-js` from.                                                                                                                                           |
+| `clerkJSVariant?`         | `string`                                   | If your web application only uses Control components you can set this value to `headless` and load a minimal ClerkJS bundle for optimal page performance.                                                                  |
+| `clerkJSVersion?`         | `string`                                   | Define the npm version for `@clerk/clerk-js`.                                                                                                                                                                              |
+| `supportEmail?`           | `string`                                   | Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.                                                                                              |
+| `localization?`           | `object`                                   | Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                               |
+| `appearance?`             | `object`                                   | Optional object to customize your Components. Will only affect Clerk Components and not Account Portal pages.                                                                                                              |
+| `allowedRedirectOrigins?` | `Array<string \| RegExp>`                  | Optional array of domains used to validate against the query param of an auth redirect. If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console. |
+| `afterSignInUrl`          | `string`                                   | Full URL or path to navigate after successful sign in.                                                                                                                                                                     |
+| `afterSignUpUrl`          | `string`                                   | Full URL or path to navigate after successful sign up.                                                                                                                                                                     |
